# car-prediction-service

./: .gitignore  README.md  pyproject.toml
app/: main.py  schemas.py
app/routers/: category.py  price.py  transmission.py
models/: models_metadata.json  transmission_model.pkl
scripts/: 01_eda.py  02_step1_encoding.py  02_step2_feature_engineering.py  02_step3_scaling.py  02_step4_train_test_split.py  02_step5_pipeline.py  02_train_models.py  03_train_and_evaluate.py  03_train_transmission_model.py  04_feature_importance_and_save.py
